Improve cross-browser UX, free HD export flow, and lyrics layout controls

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-    "dev": "concurrently \"node --env-file=.env server.js\" \"vite\"",
+        "dev": "concurrently \"node --env-file=.env server.js\" \"node -e \\\"const net=require('node:net');const tryConnect=()=>{const s=net.connect(8787,'127.0.0.1');s.on('connect',()=>{s.end();process.exit(0);});s.on('error',()=>setTimeout(tryConnect,200));};tryConnect();\\\" && vite\"",
         "dev:client": "vite",
-    "dev:server": "node --env-file=.env server.js",
+        "dev:server": "node --env-file=.env server.js",
         "build": "vite build",
         "preview": "vite preview"
     },
     "dependencies": {
+        "dom-to-image": "^2.6.0",
         "dotenv": "^17.3.1",
         "express": "^4.21.2"
     },
